--- a/index.html
+++ b/index.html
@@ -14,36 +14,36 @@
 
 <body>
   <div class="container" id="top">
-    <div class="site-header">
+    <div class="site-header" role="banner">
       <ul class="skip-links">
         <li><a href="#main-nav">Skip to main nav</a></li>
         <li><a href="#main-content">Skip to main content</a></li>
       </ul>
-      <h1>Jam Box Studios</h1>
-      <nav id="main-nav">
-        <ul>
+      <h1 role="heading">Jam Box Studios</h1>
+      <nav id="main-nav" role="navigation">
+        <ul role="list">
           <li><a href="#">Home</a></li>
           <li><a href="#">Products</a></li>
           <li><a href="#">Reservation</a></li>
           <li><a href="#">Studio</a></li>
         </ul>
       </nav>
-      <img src="https://placekitten.com/1200/900" class="banner" alt="kitten">
+      <img aria-label="kitten" src="https://placekitten.com/1200/900" class="banner" alt="kitten">
     </div>
-    <main id="main-content">
-      <h1>Welcome to Jam Box</h1>
+    <main id="main-content" role="main">
+      <h1 role="heading">Welcome to Jam Box</h1>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio quia veritatis.</p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam perferendis expedita sed itaque odit ipsam omnis, eos voluptates magni fugit culpa voluptatibus, inventore eaque, eligendi voluptatum! Voluptate iusto error voluptatibus.</p>
       <div class="owner">
-        <h1>Meet the owner</h1>
-        <ul>
-          <li>Name: John Doe</li>
-          <li>Title: CEO</li>
-          <li>Email: johnjoe@jambox.ca</li>
-          <li>Phone: 613-000-0000</li>
+        <h1 role="heading">Meet the owner</h1>
+        <ul itemscope itemtype="https://schema.org/Person">
+          <li itemprop="name">Name: John Doe</li>
+          <li itemprop="jobTitle">Title: CEO</li>
+          <li itemprop="email">Email: johnjoe@jambox.ca</li>
+          <li itemprop="number">Phone: 613-000-0000</li>
         </ul>
-        <h1>Address</h1>
-        <p>
+        <h1 role="heading">Address</h1>
+        <p role="contentinfo">
           Jambox Studios
           123 Guitar Road,
           Musicville, Danceistan
@@ -51,19 +51,19 @@
         </p>
       </div>
       <div class="contact-section">
-        <h1>Contact Us</h1>
-        <form action="thanks.html">
+        <h1 role="heading">Contact Us</h1>
+        <form action="thanks.html" role="form">
           <label>Full Name</label>
           <input type="text" placeholder="Full Name">
           <input type="text" placeholder="Email">
           <input type="text" placeholder="Subject">
           <b>Your Message</b>
           <textarea></textarea>
-          <button type="submit">Send</button>
+          <button type="submit" aria-label="sending your contact info in">Send</button>
         </form>
       </div>
     </main>
-    <footer class="site-footer">
+    <footer class="site-footer" role="contentinfo">
       &copy; 2021 Jam Box Studios <a href="#top">Back to Top</a>
     </footer>
   </div>
